--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,10 +1,11 @@
 global
     log /dev/log local0 notice
-    maxconn 50000        # Total maksimal koneksi *per process*
-    nbproc 2             # 2 worker process (sesuai jumlah core CPU)
-    nbthread 1           # 1 thread per process (optimal untuk 2 core)
-    cpu-map 1 0          # Bind process 1 ke CPU core 0
-    cpu-map 2 1          # Bind process 2 ke CPU core 1
+    maxconn 100000
+    nbthread 4             # 4 thread (sesuai jumlah core CPU)
+    cpu-map 1 0            # Thread 1 -> CPU core 0
+    cpu-map 2 1            # Thread 2 -> CPU core 1
+    cpu-map 3 2            # Thread 3 -> CPU core 2
+    cpu-map 4 3            # Thread 4 -> CPU core 3
     tune.ssl.default-dh-param 2048
     user haproxy
     group haproxy
@@ -12,7 +13,7 @@ global
 
 defaults
     log global
-    mode http            # Gunakan mode http untuk WebSocket
+    mode http            # Gunakan mode http untuk WebSocket dan gRPC
     timeout connect 5s
     timeout client 30s
     timeout server 30s
@@ -21,24 +22,50 @@ defaults
 
 frontend http-in
     bind *:80
-    #acl is_http hdr(host) -i xmn.wirelessme.tech   # Ganti dengan domain Anda
-    #use_backend http-backend if is_http
     bind *:443 ssl crt /etc/haproxy/certs/domain.pem alpn h2,http/1.1 ssl-min-ver TLSv1.2
     #redirect scheme https code 301 if !{ ssl_fc }
 
-        # ACL untuk routing
-        acl is_vmess path_beg /vmess-ws
-        use_backend vmess-backend if is_vmess
-	acl is_vless path_beg /vless-ws
-	use_backend vless-backend if is_vless
-	acl is_trojan path_beg /trojan-ws
-	use_backend trojan-backend if is_trojan
+    # ACL untuk routing WebSocket
+    acl is_vmess path_beg /vmess
+    use_backend vmess-backend if is_vmess
 
+    acl is_vless path_beg /vless-ws
+    use_backend vless-backend if is_vless
+
+    acl is_trojan path_beg /trojan-ws
+    use_backend trojan-backend if is_trojan
+
+    # =============================================================
+    # PERUBAHAN DI SINI: ACL untuk routing gRPC menggunakan path_beg
+    # =============================================================
+    acl is_vmess_grpc path_beg /vmess-grpc
+    use_backend vmess-grpc-backend if is_vmess_grpc
+
+    acl is_vless_grpc path_beg /vless-grpc
+    use_backend vless-grpc-backend if is_vless_grpc
+
+    acl is_trojan_grpc path_beg /trojan-grpc
+    use_backend trojan-grpc-backend if is_trojan_grpc
+
+# --- Backend untuk WebSocket ---
 backend vmess-backend
     server vmess-server 127.0.0.1:10001 check
+
 backend vless-backend
-	server vless-server 127.0.0.1:10002 check
+    server vless-server 127.0.0.1:10002 check
+
 backend trojan-backend
-	server trojan-server 127.0.0.1:10003 check
+    server trojan-server 127.0.0.1:10003 check
 
+# --- Backend untuk gRPC ---
+backend vmess-grpc-backend
+    mode http
+    server vmess-grpc-server 127.0.0.1:20001 proto h2 check
 
+backend vless-grpc-backend
+    mode http
+    server vless-grpc-server 127.0.0.1:20002 proto h2 check
+
+backend trojan-grpc-backend
+    mode http
+    server trojan-grpc-server 127.0.0.1:20003 proto h2 check
