--- a/agenenv/.env
+++ b/agenenv/.env
@@ -3,7 +3,7 @@ DOMAIN_PATH=/usr/local/etc/xray/domain
 COFIG_DIR=/var/www/html/configs/
 LOG_FILE=/var/log/xray-agent-mongo.log
 BACKUP_DIR=/usr/local/etc/xray/backups_agent/
-BOT_TOKEN=8185122810:AAFev-gNgs8hgIWTB__G-6p6l76kIXiVlQk
-MONGO_URI=mongodb+srv://masjeho21:joni260196@cluster0.bk2k2bt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+BOT_TOKEN=
+MONGO_URI=
 MONGO_DB_NAME=xray_bot_db
 THIRTY_DAY_COST=45000
