--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,11 +1,11 @@
 global
     log /dev/log local0 notice
-    maxconn 100000
-    nbthread 4             # 4 thread (sesuai jumlah core CPU)
+    maxconn 25000
+    nbthread 1             # 4 thread (sesuai jumlah core CPU)
     cpu-map 1 0            # Thread 1 -> CPU core 0
-    cpu-map 2 1            # Thread 2 -> CPU core 1
-    cpu-map 3 2            # Thread 3 -> CPU core 2
-    cpu-map 4 3            # Thread 4 -> CPU core 3
+   # cpu-map 2 1            # Thread 2 -> CPU core 1
+   # cpu-map 3 2            # Thread 3 -> CPU core 2
+    #cpu-map 4 3            # Thread 4 -> CPU core 3
     tune.ssl.default-dh-param 2048
     user haproxy
     group haproxy
