--- a/adminenv/.env
+++ b/adminenv/.env
@@ -5,11 +5,11 @@ COFIG_DIR=/var/www/html/configs/
 LOG_FILE=/var/log/xray-admin-mongo.log
 
 
-BOT_TOKEN=7729571896:AAHDyLLOS6w3vs4gcrvjopDE9FLe2Fw4Vc8
-INITIAL_ADMIN=1658354197
-NOTIFICATION_GROUP_ID=-1002075701197
+BOT_TOKEN=
+INITIAL_ADMIN=
+NOTIFICATION_GROUP_ID=
 NOTIFICATION_TOPIC_ID=131
-MONGO_URI=mongodb+srv://masjeho21:joni260196@cluster0.bk2k2bt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=
 MONGO_DB_NAME=xray_bot_db
 
 MAX_USERS=2000 # Maximum number of users
