--- a/agenenv/.env
+++ b/agenenv/.env
@@ -1,8 +1,8 @@
-COFIG_PATH=/usr/local/etc/xray/config.json
-DOMAIN_PATH=/usr/local/etc/xray/domain
-COFIG_DIR=/var/www/html/configs/
-LOG_FILE=/var/log/xray-agent-mongo.log
-BACKUP_DIR=/usr/local/etc/xray/backups_agent/
+#COFIG_PATH=/usr/local/etc/xray/config.json
+#DOMAIN_PATH=/usr/local/etc/xray/domain
+#COFIG_DIR=/var/www/html/configs/
+#LOG_FILE=/var/log/xray-agent-mongo.log
+#BACKUP_DIR=/usr/local/etc/xray/backups_agent/
 BOT_TOKEN=
 MONGO_URI=
 MONGO_DB_NAME=xray_bot_db
